--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1253,7 +1253,6 @@ payload:
   - '+.13fuwu.com'
   - '+.13gm.com'
   - '+.13hangpifa.com'
-  - '+.13mobi.com'
   - '+.13ww.net'
   - '+.13xiaoshuoa.com'
   - '+.13yx.com'
@@ -1559,6 +1558,7 @@ payload:
   - '+.17doubao.com'
   - '+.17dp.com'
   - '+.17emarketing.com'
+  - '+.17ex.com'
   - '+.17fanwen.com'
   - '+.17fee.com'
   - '+.17fengguo.com'
@@ -2369,14 +2369,12 @@ payload:
   - '+.268v.com'
   - '+.269.net'
   - '+.26923.com'
-  - '+.26abc.com'
   - '+.26ef.com'
   - '+.26host.com'
   - '+.26joy.com'
   - '+.26ksw.com'
   - '+.26lady.com'
   - '+.26tc.com'
-  - '+.26wp.com'
   - '+.26youxi.com'
   - '+.26yx.com'
   - '+.27270.com'
@@ -5127,7 +5125,6 @@ payload:
   - '+.5w52.com'
   - '+.5w5w.com'
   - '+.5wanpk.com'
-  - '+.5wanq.com'
   - '+.5wx.org'
   - '+.5xcg.com'
   - '+.5xiaobo.com'
@@ -5303,7 +5300,6 @@ payload:
   - '+.66378.com'
   - '+.66460.com'
   - '+.6655.la'
-  - '+.6655cy.com'
   - '+.6656pk.com'
   - '+.6660333.com'
   - '+.6665.com'
@@ -6606,7 +6602,6 @@ payload:
   - '+.91pandian.com'
   - '+.91paobao.com'
   - '+.91pdf.com'
-  - '+.91pet.net'
   - '+.91php.com'
   - '+.91pic.org'
   - '+.91pkpk.com'
@@ -7197,7 +7192,6 @@ payload:
   - '+.9miao.com'
   - '+.9miaoxueyuan.com'
   - '+.9mic.com'
-  - '+.9msg.com'
   - '+.9nali.com'
   - '+.9now.net'
   - '+.9ok.com'
@@ -7413,7 +7407,6 @@ payload:
   - '+.acfunchina.com'
   - '+.acg-moe.com'
   - '+.acg.gd'
-  - '+.acg.gg'
   - '+.acg.tv'
   - '+.acg17.com'
   - '+.acg183.com'
@@ -7577,7 +7570,6 @@ payload:
   - '+.adobeae.com'
   - '+.adobeedu.com'
   - '+.adobetop.com'
-  - '+.adoceans.com'
   - '+.adoregeek.com'
   - '+.adpchina.com'
   - '+.adpgsc.com'
@@ -8319,6 +8311,7 @@ payload:
   - '+.alinx.vip'
   - '+.aliog.com'
   - '+.alip.biz'
+  - '+.alipansou.com'
   - '+.alipay-eco.com'
   - '+.alipay.com'
   - '+.alipay.hk'
@@ -11697,6 +11690,7 @@ payload:
   - '+.bom.ai'
   - '+.bom2buy.com'
   - '+.bomanair.com'
+  - '+.bomeeting.net'
   - '+.bomin-china.com'
   - '+.bomman.com'
   - '+.bon-top.com'
@@ -13092,7 +13086,6 @@ payload:
   - '+.cdn-dodo.com'
   - '+.cdn-files.net'
   - '+.cdn-hotels.com'
-  - '+.cdn-ng.net'
   - '+.cdn-speed.com'
   - '+.cdn-static.farfetch-contents.com'
   - '+.cdn-uc.cc'
@@ -13731,7 +13724,6 @@ payload:
   - '+.che300.com'
   - '+.che6che5.com'
   - '+.cheaa.com'
-  - '+.cheapermai.com'
   - '+.cheapyou.com'
   - '+.cheari.com'
   - '+.chebaba.com'
@@ -14520,7 +14512,6 @@ payload:
   - '+.chinasws.com'
   - '+.chinasydw.org'
   - '+.chinatai.com'
-  - '+.chinataiwan.org'
   - '+.chinatalent.org'
   - '+.chinatarena.com'
   - '+.chinatat.com'
@@ -14590,7 +14581,6 @@ payload:
   - '+.chinavipsoft.com'
   - '+.chinavisual.com'
   - '+.chinavivaki.com'
-  - '+.chinavnet.com'
   - '+.chinavoa.com'
   - '+.chinavr.net'
   - '+.chinawaiyu.com'
@@ -15255,7 +15245,6 @@ payload:
   - '+.clled.com'
   - '+.clloz.com'
   - '+.clngaa.com'
-  - '+.clocklab.tech'
   - '+.cloopen.com'
   - '+.cloopen.net'
   - '+.cloopm.com'
@@ -16411,7 +16400,6 @@ payload:
   - '+.cp455.com'
   - '+.cpajia.com'
   - '+.cpass.com'
-  - '+.cpatrk.net'
   - '+.cpbao.com'
   - '+.cpc.cc'
   - '+.cpcccac.com'
@@ -20430,7 +20418,6 @@ payload:
   - '+.ee8828.com'
   - '+.eebbk.com'
   - '+.eebbk.net'
-  - '+.eebest.com'
   - '+.eeblog.net'
   - '+.eeboard.com'
   - '+.eechina.com'
@@ -20440,7 +20427,6 @@ payload:
   - '+.eecso.com'
   - '+.eedns.com'
   - '+.eee-eee.com'
-  - '+.eee114.com'
   - '+.eee4.com'
   - '+.eeedri.com'
   - '+.eeedu.net'
@@ -20960,7 +20946,6 @@ payload:
   - '+.erongda.com'
   - '+.erongdu.com'
   - '+.erpcoo.com'
-  - '+.errenzhuan.cc'
   - '+.ershenghuo.net'
   - '+.ershicimi.com'
   - '+.ershouhui.com'
@@ -21244,6 +21229,7 @@ payload:
   - '+.exchangecn.com'
   - '+.exchen.net'
   - '+.exdoll.com'
+  - '+.exexm.com'
   - '+.exfree.com'
   - '+.exhera.com'
   - '+.exiaoba.com'
@@ -24142,6 +24128,7 @@ payload:
   - '+.gogooffer.com'
   - '+.gogopzh.com'
   - '+.gogoqq.com'
+  - '+.gogotushuguan.com'
   - '+.gogoup.com'
   - '+.gohighfund.com'
   - '+.goho.co'
@@ -26958,7 +26945,6 @@ payload:
   - '+.hj-mail.com'
   - '+.hj.vc'
   - '+.hj776.com'
-  - '+.hj8.org'
   - '+.hjagent.com'
   - '+.hjapi.com'
   - '+.hjbbs.com'
@@ -27368,6 +27354,7 @@ payload:
   - '+.hongdoulive.com'
   - '+.hongen.com'
   - '+.hongfen.org'
+  - '+.hongfengye.com'
   - '+.honggebang.com'
   - '+.honghailt.com'
   - '+.honghanda.com'
@@ -31113,6 +31100,7 @@ payload:
   - '+.jcmtxs.com'
   - '+.jcnano.com'
   - '+.jcnk120.com'
+  - '+.jcoal.com'
   - '+.jcodecraeer.com'
   - '+.jcpeixun.com'
   - '+.jcqczb.com'
@@ -31329,7 +31317,6 @@ payload:
   - '+.jgwsoft.com'
   - '+.jgxlzd.com'
   - '+.jgy.com'
-  - '+.jgyflqc.com'
   - '+.jgyljt.com'
   - '+.jgzuan.com'
   - '+.jgzx.org'
@@ -31724,7 +31711,6 @@ payload:
   - '+.jieyoujob.com'
   - '+.jieyue.net'
   - '+.jiez238.com'
-  - '+.jiezhu123.com'
   - '+.jifang360.com'
   - '+.jifang365.com'
   - '+.jifangcheng.com'
@@ -32279,6 +32265,7 @@ payload:
   - '+.jjkk.org'
   - '+.jjkucunxie.com'
   - '+.jjldbk.com'
+  - '+.jjldxz.com'
   - '+.jjlsd.com'
   - '+.jjmatch.com'
   - '+.jjmh.com'
@@ -34385,6 +34372,7 @@ payload:
   - '+.kqiwen.com'
   - '+.kqiwen.net'
   - '+.kqj123.com'
+  - '+.kqmmm.com'
   - '+.kqqy.com'
   - '+.kqzlzx.com'
   - '+.kr-cell.com'
@@ -34455,6 +34443,7 @@ payload:
   - '+.ksyuncdn.com'
   - '+.ksyuncs.com'
   - '+.ksyungslb.com'
+  - '+.ksyungslb.xyz'
   - '+.ksyunv5.com'
   - '+.ksyunwaf.com'
   - '+.kszhuanjia.com'
@@ -37034,7 +37023,6 @@ payload:
   - '+.ltfwzs.com'
   - '+.ltimg.net'
   - '+.ltkdj.com'
-  - '+.ltmei.com'
   - '+.ltnic.com'
   - '+.ltp-cloud.com'
   - '+.ltp.ai'
@@ -38629,7 +38617,6 @@ payload:
   - '+.miaomiaozhe.com'
   - '+.miaomore.com'
   - '+.miaopai.com'
-  - '+.miaopin8.com'
   - '+.miaoquantuan.com'
   - '+.miaoshou.com'
   - '+.miaoshou.net'
@@ -40289,7 +40276,6 @@ payload:
   - '+.nbayaobasketballclub.com'
   - '+.nbazww.com'
   - '+.nbbeer.com'
-  - '+.nbbiao.com'
   - '+.nbbjack.com'
   - '+.nbchao.com'
   - '+.nbcsgo.com'
@@ -40773,7 +40759,6 @@ payload:
   - '+.niuboli.com'
   - '+.niucache.com'
   - '+.niucdn.com'
-  - '+.niuche.com'
   - '+.niucodata.com'
   - '+.niudai120.com'
   - '+.niug8.com'
@@ -41023,7 +41008,6 @@ payload:
   - '+.nordritools.com'
   - '+.norinco.com'
   - '+.norincogroup-ebuy.com'
-  - '+.norlinked.com'
   - '+.normcore.com'
   - '+.normstar.net'
   - '+.northdy.com'
@@ -41303,7 +41287,6 @@ payload:
   - '+.oa5588.com'
   - '+.oa8000.com'
   - '+.oabg.net'
-  - '+.oabus.net'
   - '+.oact.net'
   - '+.oadz.com'
   - '+.oahelp.com'
@@ -41586,7 +41569,6 @@ payload:
   - '+.oneiwff.com'
   - '+.onekey.cc'
   - '+.onekeyghost.com'
-  - '+.onekeyrom.com'
   - '+.onemob.mobi'
   - '+.onemovie.com'
   - '+.onemsdn.com'
@@ -41972,6 +41954,7 @@ payload:
   - '+.ouyada.com'
   - '+.ouyaoxiazai.com'
   - '+.ouyeel.com'
+  - '+.ouyi.zone'
   - '+.ouyingyimin.com'
   - '+.ouzhougoufang.com'
   - '+.ovalechina.com'
@@ -42323,7 +42306,6 @@ payload:
   - '+.pc6.com'
   - '+.pc6a.com'
   - '+.pc811.com'
-  - '+.pc840.com'
   - '+.pc841.com'
   - '+.pc9.com'
   - '+.pcaposter.com'
@@ -43357,7 +43339,6 @@ payload:
   - '+.pt-link.com'
   - '+.pt80.com'
   - '+.pt80.net'
-  - '+.ptalking.com'
   - '+.ptausercontent.com'
   - '+.ptbus.com'
   - '+.ptc-asia.com'
@@ -43966,7 +43947,6 @@ payload:
   - '+.qibosoft.com'
   - '+.qibuge.com'
   - '+.qibuluo.com'
-  - '+.qibuzw.com'
   - '+.qicaispace.com'
   - '+.qicaitechan.com'
   - '+.qicaixianhua.com'
@@ -44033,7 +44013,6 @@ payload:
   - '+.qihoo.net'
   - '+.qihu.com'
   - '+.qihu.org'
-  - '+.qihuayao.com'
   - '+.qihucdn.com'
   - '+.qihuiwang.com'
   - '+.qihuorumen.com'
@@ -44429,6 +44408,7 @@ payload:
   - '+.qking.ink'
   - '+.qkkjd.com'
   - '+.qkl123.com'
+  - '+.qkl126.com'
   - '+.qknown.com'
   - '+.qksw.com'
   - '+.qktoutiao.com'
@@ -46352,7 +46332,6 @@ payload:
   - '+.sbanfu.com'
   - '+.sbanzu.com'
   - '+.sbc-mcc.com'
-  - '+.sbc398.com'
   - '+.sbc665.com'
   - '+.sbeira.com'
   - '+.sbh15.com'
@@ -53091,7 +53070,6 @@ payload:
   - '+.ubs001.com'
   - '+.ubssdic.com'
   - '+.ubtrobot.com'
-  - '+.ubuntubar.com'
   - '+.ubuntukylin.com'
   - '+.ubuntukylin.org'
   - '+.ubuntuqa.com'
@@ -53110,7 +53088,6 @@ payload:
   - '+.ucancs.com'
   - '+.ucantech.com'
   - '+.ucantech.net'
-  - '+.ucardpro.com'
   - '+.ucarinc.com'
   - '+.ucb6.com'
   - '+.ucbug.com'
@@ -53515,6 +53492,7 @@ payload:
   - '+.upwith.me'
   - '+.upx8.com'
   - '+.upyun.com'
+  - '+.upyunso.com'
   - '+.upzxt.com'
   - '+.uqbike.com'
   - '+.uqche.com'
@@ -59254,7 +59232,6 @@ payload:
   - '+.xuanjutong.com'
   - '+.xuanke.com'
   - '+.xuanlishi.com'
-  - '+.xuanliwang.com'
   - '+.xuannaer.com'
   - '+.xuanquge.com'
   - '+.xuanqun.com'
@@ -62235,7 +62212,6 @@ payload:
   - '+.yunpian.com'
   - '+.yunpiao.net'
   - '+.yunpigai.com'
-  - '+.yunplus.io'
   - '+.yunpp.com'
   - '+.yunqi.org'
   - '+.yunqi2050.com'
@@ -62559,7 +62535,6 @@ payload:
   - '+.yygold.com'
   - '+.yygrammar.com'
   - '+.yygzs.com'
-  - '+.yyh.co'
   - '+.yyh.la'
   - '+.yyh2.com'
   - '+.yyhao.com'
@@ -62704,7 +62679,6 @@ payload:
   - '+.zahuishi.com'
   - '+.zai-art.com'
   - '+.zaibei.net'
-  - '+.zaidu.la'
   - '+.zaiduu.com'
   - '+.zaih.com'
   - '+.zaihuangshi.com'
@@ -65422,7 +65396,6 @@ payload:
   - '+.zzyedu.org'
   - '+.zzyichen.net'
   - '+.zzyiquan.com'
-  - '+.zzyjs.com'
   - '+.zzyjsmba.com'
   - '+.zzyyrl.com'
   - '+.zzz4.com'
