--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2958,6 +2958,7 @@ payload:
   - '+.361dai.com'
   - '+.361games.com'
   - '+.361mogame.com'
+  - '+.361shipin.com'
   - '+.361sport.com'
   - '+.361way.com'
   - '+.362.cc'
@@ -4731,7 +4732,6 @@ payload:
   - '+.567idc.com'
   - '+.5684.com'
   - '+.569.com'
-  - '+.5694.com'
   - '+.56a.com'
   - '+.56ads.com'
   - '+.56beijing.org'
@@ -5862,7 +5862,6 @@ payload:
   - '+.7flowers.com'
   - '+.7forz.com'
   - '+.7fresh.com'
-  - '+.7fun.org'
   - '+.7gz.com'
   - '+.7hcn.com'
   - '+.7help.net'
@@ -6142,7 +6141,6 @@ payload:
   - '+.8558.org'
   - '+.85679999.com'
   - '+.857yzf.com'
-  - '+.85814.com'
   - '+.85878078.com'
   - '+.858game.com'
   - '+.858guakao.com'
@@ -6300,6 +6298,7 @@ payload:
   - '+.88eq.com'
   - '+.88fenxiao.com'
   - '+.88h3.com'
+  - '+.88hd.com'
   - '+.88hom.com'
   - '+.88ht.com'
   - '+.88htu.com'
@@ -6985,6 +6984,8 @@ payload:
   - '+.98ep.com'
   - '+.98fp.com'
   - '+.98jx.com'
+  - '+.98kkw.com'
+  - '+.98kpm.com'
   - '+.98mp.com'
   - '+.98nice.com'
   - '+.98one.com'
@@ -11603,7 +11604,6 @@ payload:
   - '+.bobcoder.cc'
   - '+.bobdirectbank.com'
   - '+.bobidc.com'
-  - '+.bobiman.com'
   - '+.boblog.com'
   - '+.bobo.com'
   - '+.bobopic.com'
@@ -14567,7 +14567,6 @@ payload:
   - '+.chinauos.com'
   - '+.chinauos.net'
   - '+.chinauos.org'
-  - '+.chinaupa.com'
   - '+.chinaups.com'
   - '+.chinaus-maker.org'
   - '+.chinaus.com'
@@ -18025,7 +18024,6 @@ payload:
   - '+.dede168.com'
   - '+.dedeapps.com'
   - '+.dedecms.com'
-  - '+.dedecms51.com'
   - '+.dedecmsplus.com'
   - '+.dededao.com'
   - '+.dedeeims.com'
@@ -18658,7 +18656,6 @@ payload:
   - '+.dishuge.com'
   - '+.dishuizhijia.com'
   - '+.diskgenius.com'
-  - '+.disksing.com'
   - '+.dislytegame.com'
   - '+.dismall.com'
   - '+.disneybox.com'
@@ -20445,7 +20442,6 @@ payload:
   - '+.eeioe.com'
   - '+.eelly.com'
   - '+.eeloves.com'
-  - '+.eenot.com'
   - '+.eeook.com'
   - '+.eeparking.com'
   - '+.eeq8.com'
@@ -21778,6 +21774,7 @@ payload:
   - '+.fcheche.com'
   - '+.fcjob.net'
   - '+.fcjob88.com'
+  - '+.fclouddns.net'
   - '+.fcloudpaas.com'
   - '+.fcnes.com'
   - '+.fcpiao.com'
@@ -22390,7 +22387,6 @@ payload:
   - '+.flvsp.com'
   - '+.flvurl.net'
   - '+.flxc.net'
-  - '+.flxdns.com'
   - '+.flxz.com'
   - '+.fly1999.com'
   - '+.fly3949.com'
@@ -25934,7 +25930,6 @@ payload:
   - '+.harmony3.com'
   - '+.harmony4s.com'
   - '+.harmonyos.com'
-  - '+.haroldrandom.me'
   - '+.harrynull.tech'
   - '+.harrypottermagicawakened.com'
   - '+.hartlepool-myschool.com'
@@ -26150,7 +26145,6 @@ payload:
   - '+.hbtxbaidu.com'
   - '+.hbtybio.com'
   - '+.hbtycp.com'
-  - '+.hbweishuo.com'
   - '+.hbwh.net'
   - '+.hbwhgs.com'
   - '+.hbwhjj.com'
@@ -29275,7 +29269,6 @@ payload:
   - '+.idcsec.com'
   - '+.idcser.com'
   - '+.idcsh.com'
-  - '+.idcsh.net'
   - '+.idcsped.com'
   - '+.idcspy.com'
   - '+.idcspy.net'
@@ -35585,6 +35578,7 @@ payload:
   - '+.leslie-cheung.com'
   - '+.lesofaka.com'
   - '+.lesports.com'
+  - '+.less-bug.com'
   - '+.lesscss.net'
   - '+.lessisbetter.site'
   - '+.lesun.org'
@@ -38216,7 +38210,6 @@ payload:
   - '+.meierbei.com'
   - '+.meifajie.com'
   - '+.meifang8.com'
-  - '+.meifazu.com'
   - '+.meigeinc.com'
   - '+.meigongla.com'
   - '+.meigongyun.com'
@@ -40265,7 +40258,6 @@ payload:
   - '+.nb301.xyz'
   - '+.nb591.com'
   - '+.nb888888.com'
-  - '+.nba008.com'
   - '+.nbabm.com'
   - '+.nbadpark.com'
   - '+.nbahero.com'
@@ -40754,7 +40746,6 @@ payload:
   - '+.niubi114.com'
   - '+.niubilai.com'
   - '+.niubilety.com'
-  - '+.niubiquan.com'
   - '+.niubixia.com'
   - '+.niuboli.com'
   - '+.niucache.com'
@@ -40808,7 +40799,6 @@ payload:
   - '+.nizuixing.com'
   - '+.nj-bl.com'
   - '+.nj-marathon.org'
-  - '+.njaeqjx.com'
   - '+.njbaisou.com'
   - '+.njc100.com'
   - '+.njcdata.com'
@@ -44823,6 +44813,7 @@ payload:
   - '+.quegoo.com'
   - '+.queji.tw'
   - '+.queniubg.com'
+  - '+.queniucf.com'
   - '+.queniufm.com'
   - '+.queqiaoba.com'
   - '+.querylist.cc'
@@ -46058,6 +46049,7 @@ payload:
   - '+.rxjy.com'
   - '+.rxshc.com'
   - '+.rxys.com'
+  - '+.ry.rs'
   - '+.ryanbencapital.com'
   - '+.ryanc.cc'
   - '+.rybbaby.com'
@@ -46332,7 +46324,6 @@ payload:
   - '+.sbanfu.com'
   - '+.sbanzu.com'
   - '+.sbc-mcc.com'
-  - '+.sbc665.com'
   - '+.sbeira.com'
   - '+.sbh15.com'
   - '+.sbiquge.com'
@@ -47349,7 +47340,6 @@ payload:
   - '+.shengjoy.com'
   - '+.shengli.com'
   - '+.shengming.net'
-  - '+.shengminsy.com'
   - '+.shengniuuz.com'
   - '+.shengpay.com'
   - '+.shengqian51.com'
@@ -49598,6 +49588,7 @@ payload:
   - '+.stutimes.com'
   - '+.stvgame.com'
   - '+.styadmin.com'
+  - '+.stylar.hk'
   - '+.stylecdn.com'
   - '+.stylejie.com'
   - '+.stylemode.com'
@@ -49712,7 +49703,6 @@ payload:
   - '+.sulandscape.com'
   - '+.sule.cc'
   - '+.suleapi.com'
-  - '+.sulianlian.com'
   - '+.suliaodingzhi.com'
   - '+.sumaart.com'
   - '+.sumaarts.com'
@@ -51736,7 +51726,6 @@ payload:
   - '+.tjjwt.com'
   - '+.tjkx.com'
   - '+.tjkximg.com'
-  - '+.tjkyhr.com'
   - '+.tjllhbkj.com'
   - '+.tjluohuzhijia.com'
   - '+.tjmama.com'
@@ -52120,6 +52109,7 @@ payload:
   - '+.toufu321.com'
   - '+.toughcoder.net'
   - '+.tougub.com'
+  - '+.touhou.casa'
   - '+.touhou.cd'
   - '+.touhou.vote'
   - '+.toujidao.com'
@@ -52397,7 +52387,6 @@ payload:
   - '+.tsqt.net'
   - '+.tsqw.com'
   - '+.tsrcw.com'
-  - '+.tssakura.com'
   - '+.tsshunxin.com'
   - '+.tssns.net'
   - '+.tsstorry.com'
@@ -53039,7 +53028,6 @@ payload:
   - '+.u9u8.com'
   - '+.u9u9.com'
   - '+.ua168.com'
-  - '+.uadrc.com'
   - '+.uami-global.org'
   - '+.uao-online.com'
   - '+.uao.so'
@@ -53323,7 +53311,6 @@ payload:
   - '+.umlonline.org'
   - '+.umowang.com'
   - '+.umpay.com'
-  - '+.umr18.club'
   - '+.ums86.com'
   - '+.umsns.com'
   - '+.umtrack.com'
@@ -55863,7 +55850,6 @@ payload:
   - '+.whxc01.com'
   - '+.whxh.com'
   - '+.whxinhuo.com'
-  - '+.whxsnsy.com'
   - '+.whxunw.com'
   - '+.whxy.net'
   - '+.whxyqb.com'
@@ -56009,7 +55995,6 @@ payload:
   - '+.windcoder.com'
   - '+.windever.com'
   - '+.windin.com'
-  - '+.windleaf.site'
   - '+.windmsn.com'
   - '+.windows10.pro'
   - '+.windows10zj.com'
@@ -56699,7 +56684,6 @@ payload:
   - '+.wt8.com'
   - '+.wtaluo.com'
   - '+.wtango.com'
-  - '+.wtaovip.com'
   - '+.wtapi.com'
   - '+.wtbds.com'
   - '+.wtdex.com'
@@ -58814,6 +58798,7 @@ payload:
   - '+.xkpx.com'
   - '+.xkqyfw.com'
   - '+.xksafe.com'
+  - '+.xktoupiao.com'
   - '+.xkw.com'
   - '+.xkwe.com'
   - '+.xkyn.com'
@@ -59602,7 +59587,6 @@ payload:
   - '+.xyb100.com'
   - '+.xybsyw.com'
   - '+.xybygw.com'
-  - '+.xyc999.com'
   - '+.xycaogen.com'
   - '+.xycareer.com'
   - '+.xycdn.com'
@@ -64657,7 +64641,6 @@ payload:
   - '+.znqnet.com'
   - '+.znshuru.com'
   - '+.znsjw.com'
-  - '+.zntec.net'
   - '+.zntvrom.com'
   - '+.zntx.cc'
   - '+.zntxt.com'
@@ -64834,7 +64817,6 @@ payload:
   - '+.zsafw.com'
   - '+.zsapp.info'
   - '+.zsaxi.com'
-  - '+.zsb353.com'
   - '+.zsbeike.com'
   - '+.zsbit.com'
   - '+.zsc.io'
