--- a/directbak.yaml
+++ b/directbak.yaml
@@ -260,7 +260,6 @@ payload:
   - '+.029judao.com'
   - '+.029k.com'
   - '+.029lintong.com'
-  - '+.029rencai.com'
   - '+.029shw.com'
   - '+.029weichen.com'
   - '+.029wsw.com'
@@ -668,7 +667,6 @@ payload:
   - '+.0hgame.com'
   - '+.0ju.cc'
   - '+.0kee.com'
-  - '+.0rg.pw'
   - '+.0rl.cc'
   - '+.0rz.in'
   - '+.0s8s.com'
@@ -907,6 +905,7 @@ payload:
   - '+.112112.com'
   - '+.1122.com'
   - '+.11222.com'
+  - '+.112233vip.com'
   - '+.1122dh.com'
   - '+.1124.cc'
   - '+.1128.org'
@@ -1936,7 +1935,6 @@ payload:
   - '+.1uke.com'
   - '+.1uuc.com'
   - '+.1vp.me'
-  - '+.1wandian.com'
   - '+.1wang.com'
   - '+.1wii.com'
   - '+.1x3x.com'
@@ -2045,6 +2043,7 @@ payload:
   - '+.218996.com'
   - '+.2197079.com'
   - '+.21bcr.com'
+  - '+.21bm.com'
   - '+.21bowu.com'
   - '+.21cake.com'
   - '+.21cbr.com'
@@ -2256,7 +2255,9 @@ payload:
   - '+.23lvxing.com'
   - '+.23qb.com'
   - '+.23qb.net'
+  - '+.23qun.com'
   - '+.23sk.com'
+  - '+.23tgo.com'
   - '+.23txt.com'
   - '+.23us.cc'
   - '+.23us.la'
@@ -2311,7 +2312,6 @@ payload:
   - '+.255616.com'
   - '+.2556r.com'
   - '+.256app.com'
-  - '+.256game.com'
   - '+.25752.com'
   - '+.258.com'
   - '+.258288.com'
@@ -3814,6 +3814,7 @@ payload:
   - '+.51bmb.com'
   - '+.51bonli.com'
   - '+.51bos.com'
+  - '+.51bpsh.com'
   - '+.51bras.com'
   - '+.51btceth.com'
   - '+.51btv.com'
@@ -4713,6 +4714,7 @@ payload:
   - '+.56015.com'
   - '+.560la.com'
   - '+.5611.com'
+  - '+.561218.com'
   - '+.56135.com'
   - '+.5617.com'
   - '+.5628l.com'
@@ -5264,7 +5266,6 @@ payload:
   - '+.64ma.com'
   - '+.64mv.com'
   - '+.64pay.com'
-  - '+.64w.cc'
   - '+.651700.com'
   - '+.6528.com'
   - '+.654320.com'
@@ -5441,6 +5442,7 @@ payload:
   - '+.695157.com'
   - '+.695175.com'
   - '+.695275.com'
+  - '+.695691.xyz'
   - '+.695828.com'
   - '+.695ljg.com'
   - '+.698wan.com'
@@ -5511,7 +5513,6 @@ payload:
   - '+.6pifa.net'
   - '+.6plat.org'
   - '+.6puppy.xyz'
-  - '+.6r9.net'
   - '+.6renyou.com'
   - '+.6rooms.com'
   - '+.6s4qki.com'
@@ -5815,7 +5816,6 @@ payload:
   - '+.798edu.com'
   - '+.798ydh.com'
   - '+.799.net'
-  - '+.799281.com'
   - '+.7999.com'
   - '+.7999.tv'
   - '+.799job.com'
@@ -6246,6 +6246,7 @@ payload:
   - '+.880331.net'
   - '+.880735.com'
   - '+.88077777.com'
+  - '+.88090.com'
   - '+.880sy.com'
   - '+.880you.com'
   - '+.88106.com'
@@ -6658,6 +6659,7 @@ payload:
   - '+.91xueshu.com'
   - '+.91xunyou.com'
   - '+.91xy.com'
+  - '+.91xzba.com'
   - '+.91y.com'
   - '+.91yao.com'
   - '+.91yinpin.com'
@@ -7777,6 +7779,7 @@ payload:
   - '+.ahmayun.com'
   - '+.ahmky.com'
   - '+.ahmup.com'
+  - '+.ahnanfang.com'
   - '+.ahnews.org'
   - '+.ahougn.com'
   - '+.ahphi.com'
@@ -8290,6 +8293,7 @@ payload:
   - '+.aliexpress-media.com'
   - '+.aliexpress.com'
   - '+.aliexpress.ru'
+  - '+.aliexpress.us'
   - '+.alifabu.com'
   - '+.alifanyi.com'
   - '+.aligames.com'
@@ -12132,6 +12136,7 @@ payload:
   - '+.bxdaka.com'
   - '+.bxdlkj.com'
   - '+.bxfaka.com'
+  - '+.bxgdl.com'
   - '+.bxgjyc.com'
   - '+.bxgtd.com'
   - '+.bxhaibao.com'
@@ -15694,6 +15699,7 @@ payload:
   - '+.cnhaskell.com'
   - '+.cnhbgt.com'
   - '+.cnhbstock.com'
+  - '+.cnhbtc.com'
   - '+.cnhd.com'
   - '+.cnhetianyu.com'
   - '+.cnhhl.com'
@@ -15919,7 +15925,6 @@ payload:
   - '+.cnscee.com'
   - '+.cnscore.com'
   - '+.cnsdjxw.com'
-  - '+.cnsdtv.com'
   - '+.cnsdzb.com'
   - '+.cnseay.com'
   - '+.cnseeq.com'
@@ -16228,7 +16233,6 @@ payload:
   - '+.comicyu.com'
   - '+.comiis.com'
   - '+.comingchina.com'
-  - '+.comingspace.com'
   - '+.comlan.com'
   - '+.comlbs.com'
   - '+.commchina.net'
@@ -17987,7 +17991,6 @@ payload:
   - '+.ddztv.com'
   - '+.ddzuqin.com'
   - '+.de-moe.org'
-  - '+.de.net'
   - '+.de0.cc'
   - '+.de123.net'
   - '+.de1919.com'
@@ -18122,7 +18125,6 @@ payload:
   - '+.dengtadaka.com'
   - '+.dengxiaolong.com'
   - '+.dengxiaopingnet.com'
-  - '+.denic.de'
   - '+.denic.net'
   - '+.dentistshow.com'
   - '+.denuoexpo.com'
@@ -18797,7 +18799,6 @@ payload:
   - '+.dljrw.com'
   - '+.dljs.net'
   - '+.dllake.com'
-  - '+.dllcm.com'
   - '+.dllhook.com'
   - '+.dllku.com'
   - '+.dllzj.com'
@@ -19677,6 +19678,7 @@ payload:
   - '+.duozhuayu.net'
   - '+.dup2.org'
   - '+.dupv.com'
+  - '+.dusays.com'
   - '+.dushewang.com'
   - '+.dushicn.com'
   - '+.dushijia.com'
@@ -19691,7 +19693,6 @@ payload:
   - '+.dushudaren.com'
   - '+.dushuge.net'
   - '+.dushuzhe.com'
-  - '+.dushuzhong.com'
   - '+.dushw.com'
   - '+.dustess.com'
   - '+.dustit.me'
@@ -21759,7 +21760,6 @@ payload:
   - '+.fc0633.com'
   - '+.fc12319.com'
   - '+.fc2.red'
-  - '+.fc2live.pw'
   - '+.fc571.com'
   - '+.fc811.com'
   - '+.fcachinagsdp.com'
@@ -22297,7 +22297,6 @@ payload:
   - '+.fjsfa.org'
   - '+.fjsfy.com'
   - '+.fjsj.com'
-  - '+.fjsjs.com'
   - '+.fjstfc.com'
   - '+.fjtelecom.com'
   - '+.fjtianya.com'
@@ -22758,7 +22757,6 @@ payload:
   - '+.ftnormal00ak.com'
   - '+.ftnormal01as.com'
   - '+.ftqq.com'
-  - '+.ftrsit.com'
   - '+.ftsafe.com'
   - '+.ftsfund.com'
   - '+.ftt.me'
@@ -23373,7 +23371,6 @@ payload:
   - '+.gbicdn.com'
   - '+.gbicom.com'
   - '+.gblhgk.com'
-  - '+.gblj365.com'
   - '+.gbofd.com'
   - '+.gboooo.com'
   - '+.gbpjam.com'
@@ -23500,6 +23497,7 @@ payload:
   - '+.gds-services.com'
   - '+.gdscse.net'
   - '+.gdscw.com'
+  - '+.gdsdwan.com'
   - '+.gdsincom.com'
   - '+.gdslwl.com'
   - '+.gdsoq.com'
@@ -23696,7 +23694,6 @@ payload:
   - '+.getui.com'
   - '+.getui.net'
   - '+.getui.vip'
-  - '+.getuikit.net'
   - '+.getulab.com'
   - '+.getvidi.co'
   - '+.gewai-cnc.com'
@@ -24470,6 +24467,7 @@ payload:
   - '+.grgsecurity.com'
   - '+.grgvision.com'
   - '+.grgyintong.com'
+  - '+.grid2048.com'
   - '+.gridsum.com'
   - '+.gridsumdissector.com'
   - '+.gridy.com'
@@ -25437,6 +25435,7 @@ payload:
   - '+.hairunpictures.com'
   - '+.haisapan.com'
   - '+.haisenyouxi8.com'
+  - '+.haishengfrp.com'
   - '+.haisheteam.com'
   - '+.haishisheji.com'
   - '+.haishui.cc'
@@ -26464,6 +26463,7 @@ payload:
   - '+.hellomeowlab.com'
   - '+.hellomoecomrade.xyz'
   - '+.hellonitrack.com'
+  - '+.hellopcb.com'
   - '+.hellorf.com'
   - '+.hellotalk8.com'
   - '+.hellotw.com'
@@ -27177,6 +27177,7 @@ payload:
   - '+.hnlbdl.com'
   - '+.hnleisu.com'
   - '+.hnliangku.com'
+  - '+.hnlssb.com'
   - '+.hnlxq.com'
   - '+.hnlzhd.com'
   - '+.hnlzw.net'
@@ -27714,7 +27715,6 @@ payload:
   - '+.hstechsz.com'
   - '+.hstong.com'
   - '+.hsutimes.com'
-  - '+.hsw2013.com'
   - '+.hsweb.me'
   - '+.hswkzy.com'
   - '+.hsxiang.com'
@@ -28200,6 +28200,7 @@ payload:
   - '+.huilan.com'
   - '+.huilanyujia.com'
   - '+.huilianyi.com'
+  - '+.huilitao.com'
   - '+.huiliubao.com'
   - '+.huilm.com'
   - '+.huilog.com'
@@ -28282,6 +28283,7 @@ payload:
   - '+.huizhimob.com'
   - '+.huizhouf.com'
   - '+.huiziyuan.net'
+  - '+.huizone.com'
   - '+.huizuche.com'
   - '+.huizuoyuezi.com'
   - '+.hujia.org'
@@ -28392,7 +28394,6 @@ payload:
   - '+.huohuolife.com'
   - '+.huoji.com'
   - '+.huoju365.com'
-  - '+.huojua.com'
   - '+.huojuli.com'
   - '+.huokebao.net'
   - '+.huokesoft.com'
@@ -30042,6 +30043,7 @@ payload:
   - '+.info35.com'
   - '+.infobidding.com'
   - '+.infobigdata.com'
+  - '+.infocloud.cc'
   - '+.infocomm-journal.com'
   - '+.infohpc.com'
   - '+.infoier.com'
@@ -31222,6 +31224,7 @@ payload:
   - '+.jecvay.com'
   - '+.jedi-games.com'
   - '+.jedoo.com'
+  - '+.jeeanlean.com'
   - '+.jeebei.com'
   - '+.jeecg.com'
   - '+.jeecg.org'
@@ -32646,6 +32649,7 @@ payload:
   - '+.jrjr.com'
   - '+.jrkantv.com'
   - '+.jrlady.com'
+  - '+.jrlxym.com'
   - '+.jrmf360.com'
   - '+.jrnba.cc'
   - '+.jrpxw.com'
@@ -32728,6 +32732,7 @@ payload:
   - '+.jsguolv.com'
   - '+.jsgyrcb.com'
   - '+.jshaman.com'
+  - '+.jshanchao.com'
   - '+.jsharer.com'
   - '+.jshasl.com'
   - '+.jshbank.com'
@@ -33509,7 +33514,6 @@ payload:
   - '+.kan0512.com'
   - '+.kan300.com'
   - '+.kan84.net'
-  - '+.kan98.com'
   - '+.kanbaobei.com'
   - '+.kanbardata.com'
   - '+.kanbing.net'
@@ -34212,7 +34216,6 @@ payload:
   - '+.knotesapp.com'
   - '+.know88.com'
   - '+.knowgive.com'
-  - '+.knowhow-china.com'
   - '+.knowingclouds.com'
   - '+.knowingcloudvip.com'
   - '+.knowingyun.com'
@@ -34254,6 +34257,7 @@ payload:
   - '+.koncoo.com'
   - '+.konekomoe.com'
   - '+.konfan.net'
+  - '+.kongao.com'
   - '+.kongapi.com'
   - '+.kongdao.com'
   - '+.kongdi.net'
@@ -34842,7 +34846,6 @@ payload:
   - '+.kyzyj.com'
   - '+.kz8yx.com'
   - '+.kza.cc'
-  - '+.kzlgd.com'
   - '+.kzore.com'
   - '+.kzt.cc'
   - '+.kztpms.com'
@@ -34944,13 +34947,11 @@ payload:
   - '+.laiyouxi.com'
   - '+.laizee.com'
   - '+.laizhouba.net'
-  - '+.laizhuan.com'
   - '+.laizi.net'
   - '+.lajixs.com'
   - '+.lakala.com'
   - '+.lakecn.com'
   - '+.lakwdian.com'
-  - '+.lalala.lol'
   - '+.lalkk.com'
   - '+.lalunalove.com'
   - '+.lamabang.com'
@@ -35852,7 +35853,6 @@ payload:
   - '+.libvideo.com'
   - '+.lic-bcbc.com'
   - '+.licai.com'
-  - '+.licai.work'
   - '+.licai18.com'
   - '+.licaie.com'
   - '+.licaifan.com'
@@ -37039,6 +37039,7 @@ payload:
   - '+.luastudio.net'
   - '+.lubandata.com'
   - '+.lubanjianye.com'
+  - '+.lubanlebiao.com'
   - '+.lubanpm.com'
   - '+.lubanshop.com'
   - '+.lubanso.com'
@@ -40759,7 +40760,6 @@ payload:
   - '+.niuhudong.com'
   - '+.niujinniu.com'
   - '+.niukk.com'
-  - '+.niuliangyun.com'
   - '+.niuniufund.com'
   - '+.niuniutui.com'
   - '+.niupinhui.com'
@@ -40872,7 +40872,6 @@ payload:
   - '+.nlpjob.com'
   - '+.nlscan.com'
   - '+.nlxn.com'
-  - '+.nly6.com'
   - '+.nlypx.com'
   - '+.nlzpy.com'
   - '+.nm8yx.com'
@@ -40925,6 +40924,7 @@ payload:
   - '+.nnt0.net'
   - '+.nntlj.com'
   - '+.nntskq.com'
+  - '+.nntxw.com'
   - '+.nnudream.com'
   - '+.nnwb.com'
   - '+.nnweding.com'
@@ -41352,6 +41352,7 @@ payload:
   - '+.oeasy.org'
   - '+.oec365.com'
   - '+.oecr.com'
+  - '+.oedun.com'
   - '+.oeebee.com'
   - '+.oeeee.com'
   - '+.oejournal.org'
@@ -41760,6 +41761,7 @@ payload:
   - '+.orgleaf.com'
   - '+.orgnitu.net'
   - '+.orient-fund.com'
+  - '+.orient-hf.com'
   - '+.orient-safety.com'
   - '+.orientalgame.com.tw'
   - '+.orientalpearltower.com'
@@ -42336,6 +42338,7 @@ payload:
   - '+.pcitc.com'
   - '+.pcme.info'
   - '+.pcmgr-global.com'
+  - '+.pcmiao.com'
   - '+.pcmoe.net'
   - '+.pcnsh.com'
   - '+.pcoic.com'
@@ -42572,7 +42575,6 @@ payload:
   - '+.photopai.com'
   - '+.photops.com'
   - '+.photosanxia.com'
-  - '+.photoyunnan.com'
   - '+.photozoomchina.com'
   - '+.phouses.com'
   - '+.php-note.com'
@@ -43574,7 +43576,6 @@ payload:
   - '+.qcds.com'
   - '+.qcenglish.com'
   - '+.qcgcj.com'
-  - '+.qchem.pw'
   - '+.qches.com'
   - '+.qchouses.com'
   - '+.qcinterfacet.com'
@@ -44514,7 +44515,6 @@ payload:
   - '+.qqan.com'
   - '+.qqapk.com'
   - '+.qqba.com'
-  - '+.qqbaobao.com'
   - '+.qqbiaoqing.com'
   - '+.qqbiaoqing8.com'
   - '+.qqbibile.com'
@@ -44859,7 +44859,6 @@ payload:
   - '+.quklive.com'
   - '+.qukuai.com'
   - '+.qukuaila.com'
-  - '+.qukuailiant.com'
   - '+.qukuba.com'
   - '+.qulishi.com'
   - '+.qulv.com'
@@ -45101,6 +45100,7 @@ payload:
   - '+.qzwb.com'
   - '+.qzxx.com'
   - '+.qzyb.com'
+  - '+.qzyxzs.com'
   - '+.qzyygk.com'
   - '+.qzze.com'
   - '+.qzzn.com'
@@ -45669,6 +45669,7 @@ payload:
   - '+.rn-hswh.com'
   - '+.rnfengwo.com'
   - '+.rngtest.com'
+  - '+.road-group.com'
   - '+.roadjava.com'
   - '+.roadlady.com'
   - '+.roadoor.com'
@@ -45856,7 +45857,6 @@ payload:
   - '+.rrzu.com'
   - '+.rrzuji.com'
   - '+.rrzxw.net'
-  - '+.rs05.com'
   - '+.rs485.net'
   - '+.rsb.net'
   - '+.rscala.com'
@@ -46283,7 +46283,6 @@ payload:
   - '+.sanyanblockchain.com'
   - '+.sanyastar.com'
   - '+.sanyatour.com'
-  - '+.sanye.cx'
   - '+.sanyexin.com'
   - '+.sanygroup.com'
   - '+.sanyhi.com'
@@ -46603,6 +46602,7 @@ payload:
   - '+.sdlongli.com'
   - '+.sdlvxing.com'
   - '+.sdly35.com'
+  - '+.sdlz.tech'
   - '+.sdmic.com'
   - '+.sdmydcr.com'
   - '+.sdmyzsgs.com'
@@ -46861,6 +46861,7 @@ payload:
   - '+.seoniao.com'
   - '+.seopath.net'
   - '+.seopre.com'
+  - '+.seosiguan.com'
   - '+.seosn.com'
   - '+.seosrx.net'
   - '+.seosteven.com'
@@ -47101,7 +47102,6 @@ payload:
   - '+.shanghaipower.com'
   - '+.shanghairanking.com'
   - '+.shanghairc.com'
-  - '+.shanghairemax.com'
   - '+.shanghairolexmasters.com'
   - '+.shanghaishuangyanpi.com'
   - '+.shanghaitianqi114.com'
@@ -47226,6 +47226,7 @@ payload:
   - '+.sharpbai.com'
   - '+.sharpmobi.com'
   - '+.shartu.com'
+  - '+.shasx.com'
   - '+.shawdo.com'
   - '+.shawdubie.com'
   - '+.shawnzeng.com'
@@ -47364,6 +47365,7 @@ payload:
   - '+.shenhaiedu.com'
   - '+.shenhexin.com'
   - '+.shenhexin.vip'
+  - '+.shenhongmao.com'
   - '+.shenhua.cc'
   - '+.shenhuagushi.net'
   - '+.shenjian.io'
@@ -48616,7 +48618,6 @@ payload:
   - '+.slinuxer.com'
   - '+.sljkj.com'
   - '+.sljypt.com'
-  - '+.slkj.org'
   - '+.sllai.com'
   - '+.slmbio.com'
   - '+.slogra.com'
@@ -48779,6 +48780,7 @@ payload:
   - '+.sndo.com'
   - '+.sneac.com'
   - '+.sneia.org'
+  - '+.sngct.com'
   - '+.sngdxsn.com'
   - '+.sngx.ml'
   - '+.snh48.com'
@@ -49127,6 +49129,7 @@ payload:
   - '+.source3g.com'
   - '+.sourcecodecap.com'
   - '+.sourcedev.cc'
+  - '+.sourcegcdn.com'
   - '+.sourl.co'
   - '+.sousea.com'
   - '+.soushai.com'
@@ -50217,7 +50220,6 @@ payload:
   - '+.sz-trip.com'
   - '+.sz-ua.com'
   - '+.sz-ytq.com'
-  - '+.sz0760.com'
   - '+.sz121.com'
   - '+.sz189.com'
   - '+.sz1978.com'
@@ -50881,7 +50883,6 @@ payload:
   - '+.tbankw.com'
   - '+.tbcache.com'
   - '+.tbdazhe.com'
-  - '+.tbdiy.com'
   - '+.tbh5.com'
   - '+.tbhcc.com'
   - '+.tbhelper.com'
@@ -50963,7 +50964,6 @@ payload:
   - '+.tcxw.cc'
   - '+.tcy365.com'
   - '+.tcylgslb.com'
-  - '+.tcz.name'
   - '+.td-tech.com'
   - '+.td22.com'
   - '+.td518.com'
@@ -51036,6 +51036,7 @@ payload:
   - '+.techmiao.com'
   - '+.technode.com'
   - '+.techoke.com'
+  - '+.techonegame.com'
   - '+.techsir.com'
   - '+.techtmt.com'
   - '+.techuangyi.com'
@@ -51476,6 +51477,7 @@ payload:
   - '+.tianxiajiameng.com'
   - '+.tianxiang.com'
   - '+.tianxianle.com'
+  - '+.tianxianmao.com'
   - '+.tianxiawangxiao.com'
   - '+.tianxiaxiao.net'
   - '+.tianxiaxinyong.com'
@@ -51609,7 +51611,6 @@ payload:
   - '+.timeread.com'
   - '+.timeread.net'
   - '+.timesdf-hn.com'
-  - '+.timeshy.com'
   - '+.timetw.com'
   - '+.timev.com'
   - '+.timing360.com'
@@ -54303,7 +54304,6 @@ payload:
   - '+.vshouce.com'
   - '+.vshuoshuo.com'
   - '+.vslai.com'
-  - '+.vsledclothes.com'
   - '+.vsnoon.com'
   - '+.vsnoon.net'
   - '+.vsnoon.org'
@@ -54646,6 +54646,7 @@ payload:
   - '+.wangmou.com'
   - '+.wangmou.net'
   - '+.wangpengcufe.com'
+  - '+.wangpian123.net'
   - '+.wangpiao.com'
   - '+.wangpiao.net'
   - '+.wangpu.net'
@@ -55745,7 +55746,6 @@ payload:
   - '+.whlrhd.com'
   - '+.whlxhs.net'
   - '+.whly56.com'
-  - '+.whlybzh.com'
   - '+.whlynk.com'
   - '+.whmama.com'
   - '+.whmeigao.com'
@@ -57078,7 +57078,6 @@ payload:
   - '+.wykw.com'
   - '+.wykz.com'
   - '+.wylws.com'
-  - '+.wymp4.net'
   - '+.wymp46.com'
   - '+.wyn88.com'
   - '+.wyptk.com'
@@ -57307,6 +57306,7 @@ payload:
   - '+.xbirder.com'
   - '+.xbjianzhan.com'
   - '+.xblds.com'
+  - '+.xbltravel.com'
   - '+.xblyw.com'
   - '+.xbmiaomu.com'
   - '+.xbniao.com'
@@ -59315,6 +59315,7 @@ payload:
   - '+.xuetangonline.com'
   - '+.xuetangx.com'
   - '+.xuetangzaixian.com'
+  - '+.xuetengedu.com'
   - '+.xueti.com'
   - '+.xuetimes.com'
   - '+.xuetu.net'
@@ -60116,6 +60117,7 @@ payload:
   - '+.ydstatic.com'
   - '+.ydsyxzx.com'
   - '+.ydtad.com'
+  - '+.ydtbl.com'
   - '+.ydtnotary.com'
   - '+.ydtongcheng.com'
   - '+.ydtun.com'
@@ -62502,7 +62504,6 @@ payload:
   - '+.yycro.com'
   - '+.yydbzz.com'
   - '+.yydcs.com'
-  - '+.yydfwl.com'
   - '+.yydidai.com'
   - '+.yyds.co'
   - '+.yydzh.com'
@@ -64047,6 +64048,7 @@ payload:
   - '+.zhundaoyun.com'
   - '+.zhuniu.com'
   - '+.zhunniao.com'
+  - '+.zhuntui.com'
   - '+.zhuo.com'
   - '+.zhuobufan.com'
   - '+.zhuofan.net'
@@ -64129,6 +64131,7 @@ payload:
   - '+.zhyccw.com'
   - '+.zhycn.com'
   - '+.zhyd.me'
+  - '+.zhyedu.com'
   - '+.zhyfjj.com'
   - '+.zhyi828.com'
   - '+.zhyingxiao.com'
@@ -65108,6 +65111,7 @@ payload:
   - '+.zwkf.net'
   - '+.zwlhome.com'
   - '+.zwoptical.com'
+  - '+.zws2.com'
   - '+.zwtianshangm.com'
   - '+.zwtkl8.com'
   - '+.zwtxipr.com'
@@ -65313,7 +65317,6 @@ payload:
   - '+.zzect.com'
   - '+.zzenglish.net'
   - '+.zzetao.com'
-  - '+.zzfcj.com'
   - '+.zzfcw.com'
   - '+.zzfly.net'
   - '+.zzfriend.com'
