--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2252,6 +2252,7 @@ payload:
   - '+.23job.net'
   - '+.23kmm.com'
   - '+.23ks.com'
+  - '+.23luke.com'
   - '+.23lvxing.com'
   - '+.23qb.com'
   - '+.23qb.net'
@@ -6294,7 +6295,6 @@ payload:
   - '+.88bank.com'
   - '+.88bx.com'
   - '+.88cdn.com'
-  - '+.88dj.com'
   - '+.88dushu.com'
   - '+.88eq.com'
   - '+.88fenxiao.com'
@@ -7406,6 +7406,7 @@ payload:
   - '+.acesheep.com'
   - '+.acetace.com'
   - '+.acewill.net'
+  - '+.acflow.com'
   - '+.acftu.org'
   - '+.acfunchina.com'
   - '+.acg-moe.com'
@@ -9800,6 +9801,7 @@ payload:
   - '+.bailiann.com'
   - '+.bailiban.com'
   - '+.bailiguangmang.com'
+  - '+.bailing88.com'
   - '+.bailitech.com'
   - '+.bailitop.com'
   - '+.bailuqixiu.com'
@@ -10005,7 +10007,6 @@ payload:
   - '+.banyuetanxcx.com'
   - '+.banyunjuhe.com'
   - '+.banzou.name'
-  - '+.banzouku.com'
   - '+.bao-cun.com'
   - '+.bao-fang.com'
   - '+.bao-hulu.com'
@@ -10517,6 +10518,7 @@ payload:
   - '+.belmeng.com'
   - '+.beltandroadforum.org'
   - '+.beltxman.com'
+  - '+.bemanicn.com'
   - '+.bemfa.com'
   - '+.bemhome.com'
   - '+.bemyceo.com'
@@ -11926,6 +11928,7 @@ payload:
   - '+.bsyxx.com'
   - '+.bt.cc'
   - '+.bt113.com'
+  - '+.bt6.club'
   - '+.bt9527.com'
   - '+.btb8.com'
   - '+.btba.cc'
@@ -11945,6 +11948,7 @@ payload:
   - '+.btcbbs.com'
   - '+.btcbl.com'
   - '+.btcha.com'
+  - '+.btclass.net'
   - '+.btcsearch.com'
   - '+.btcside.com'
   - '+.btcsos.com'
@@ -12402,6 +12406,7 @@ payload:
   - '+.cafamuseum.org'
   - '+.cafebeta.com'
   - '+.cafecole-maison.com'
+  - '+.caffci.org'
   - '+.caffeenglish.com'
   - '+.cagesblog.com'
   - '+.cagetest.com'
@@ -14891,7 +14896,6 @@ payload:
   - '+.chuimg.com'
   - '+.chuinet.com'
   - '+.chuixue.com'
-  - '+.chuixue.net'
   - '+.chuiyue.com'
   - '+.chuji8.com'
   - '+.chuju750.com'
@@ -15298,7 +15302,6 @@ payload:
   - '+.cloudkirin.com'
   - '+.cloudleft.com'
   - '+.cloudlet.info'
-  - '+.cloudmap.hk'
   - '+.cloudmes.io'
   - '+.cloudminds.com'
   - '+.cloudmob.vip'
@@ -15402,6 +15405,7 @@ payload:
   - '+.cmnet-speed.com'
   - '+.cmnxt.com'
   - '+.cmoct.com'
+  - '+.cmodel.com'
   - '+.cmodes.com'
   - '+.cmol.com'
   - '+.cmpassport.com'
@@ -16403,6 +16407,7 @@ payload:
   - '+.cp455.com'
   - '+.cpajia.com'
   - '+.cpass.com'
+  - '+.cpatrk.net'
   - '+.cpbao.com'
   - '+.cpc.cc'
   - '+.cpcccac.com'
@@ -18059,7 +18064,6 @@ payload:
   - '+.deeplearn.me'
   - '+.deepoon.com'
   - '+.deepsheet.net'
-  - '+.deepvision.ai'
   - '+.deepzz.com'
   - '+.deerchao.net'
   - '+.deerex.com'
@@ -18125,7 +18129,6 @@ payload:
   - '+.dengtadaka.com'
   - '+.dengxiaolong.com'
   - '+.dengxiaopingnet.com'
-  - '+.denic.net'
   - '+.dentistshow.com'
   - '+.denuoexpo.com'
   - '+.deosin.com'
@@ -19025,7 +19028,6 @@ payload:
   - '+.doergob.com'
   - '+.doershow.com'
   - '+.dofund.com'
-  - '+.dog126.com'
   - '+.dogecdn.com'
   - '+.dogecloud.com'
   - '+.dogedoge.com'
@@ -19546,7 +19548,6 @@ payload:
   - '+.dudumeijia.com'
   - '+.duduyu.net'
   - '+.duelcn.com'
-  - '+.dugoogle.com'
   - '+.duguying.net'
   - '+.duhao.net'
   - '+.dui.ai'
@@ -19997,6 +19998,7 @@ payload:
   - '+.e3cloud.com'
   - '+.e3ol.com'
   - '+.e4008.com'
+  - '+.e4221.com'
   - '+.e48.xyz'
   - '+.e4asoft.com'
   - '+.e521.com'
@@ -21364,6 +21366,7 @@ payload:
   - '+.f.cx'
   - '+.f008.com'
   - '+.f0580.com'
+  - '+.f09qgja1.com'
   - '+.f1-shanghai.com'
   - '+.f139.com'
   - '+.f1688.com'
@@ -22845,6 +22848,7 @@ payload:
   - '+.funjsq.com'
   - '+.funletu.com'
   - '+.funliving.com'
+  - '+.funnull31.com'
   - '+.funnulldns.com'
   - '+.funnullv27.com'
   - '+.funnullv28.com'
@@ -23910,6 +23914,7 @@ payload:
   - '+.gk114.com'
   - '+.gk99.com'
   - '+.gkbbapp.com'
+  - '+.gkcyc.com'
   - '+.gkczgs.com'
   - '+.gkdgz.com'
   - '+.gkfb.com'
@@ -24318,6 +24323,7 @@ payload:
   - '+.gotokeep.com'
   - '+.gotonav.com'
   - '+.gotonets.com'
+  - '+.gotostudyroom.com'
   - '+.gotoubi.com'
   - '+.gotozhuan.com'
   - '+.gotran.com'
@@ -24459,7 +24465,6 @@ payload:
   - '+.gretf.com'
   - '+.greycdn.net'
   - '+.greyli.com'
-  - '+.grfy.net'
   - '+.grfyw.com'
   - '+.grg2013.com'
   - '+.grgbanking.com'
@@ -25219,6 +25224,7 @@ payload:
   - '+.gzzkzsw.com'
   - '+.gzzlfw.com'
   - '+.gzzlgame.com'
+  - '+.gzzmedu.com'
   - '+.gzzoc.com'
   - '+.gzzongsi.com'
   - '+.gzzoo.com'
@@ -26958,6 +26964,7 @@ payload:
   - '+.hjhrcloud.com'
   - '+.hjido.com'
   - '+.hjiesuan.com'
+  - '+.hjjfood.com'
   - '+.hjjg.com'
   - '+.hjjh.com'
   - '+.hjjs.org'
@@ -28206,7 +28213,6 @@ payload:
   - '+.huilog.com'
   - '+.huilongsen.com'
   - '+.huilvwang.com'
-  - '+.huilvwu.com'
   - '+.huim.com'
   - '+.huimaiche.com'
   - '+.huiman.net'
@@ -30149,7 +30155,6 @@ payload:
   - '+.internationalbrand.net'
   - '+.internbird.com'
   - '+.internet-dns.com'
-  - '+.internet7.vip'
   - '+.internetke.com'
   - '+.internettrademark.com'
   - '+.internetworld.cloud'
@@ -30328,6 +30333,7 @@ payload:
   - '+.ipuu.net'
   - '+.ipuyuan.com'
   - '+.ipv4.host'
+  - '+.ipv6dns.com'
   - '+.ipv6dp.com'
   - '+.ipyker.com'
   - '+.ipyy.com'
@@ -32567,6 +32573,7 @@ payload:
   - '+.joysight.com'
   - '+.joyslink.com'
   - '+.joysung.com'
+  - '+.joytest.org'
   - '+.joytrav.com'
   - '+.joytraveller.com'
   - '+.joyu.com'
@@ -32608,7 +32615,6 @@ payload:
   - '+.jpxzm.com'
   - '+.jpyoo.com'
   - '+.jpyssc.com'
-  - '+.jpzyfx.com'
   - '+.jq-school.com'
   - '+.jq22.com'
   - '+.jqcool.net'
@@ -33925,7 +33931,6 @@ payload:
   - '+.kfzimg.com'
   - '+.kg-gold.com'
   - '+.kg.com'
-  - '+.kgdt.work'
   - '+.kgfanr.com'
   - '+.kgimg.com'
   - '+.kgogame.com'
@@ -34430,6 +34435,7 @@ payload:
   - '+.kstz1.com'
   - '+.ksudi.com'
   - '+.ksupdate.com'
+  - '+.ksy.com'
   - '+.ksydx.com'
   - '+.ksyiqiwan.com'
   - '+.ksyna.com'
@@ -34562,6 +34568,7 @@ payload:
   - '+.kuaitijian.com'
   - '+.kuaitu666.com'
   - '+.kuaiwan.com'
+  - '+.kuaiwenyun.com'
   - '+.kuaixiazai.com'
   - '+.kuaiyan.com'
   - '+.kuaiyiad.com'
@@ -35511,6 +35518,7 @@ payload:
   - '+.lemiwan.com'
   - '+.lemo360.com'
   - '+.lemobar.com'
+  - '+.lemonban.com'
   - '+.lemonyd.com'
   - '+.lemote.com'
   - '+.lempstack.com'
@@ -37193,7 +37201,6 @@ payload:
   - '+.luways.com'
   - '+.luwei.me'
   - '+.luweitech.com'
-  - '+.lux88.com'
   - '+.luxe.co'
   - '+.luxee.com'
   - '+.luxemon.com'
@@ -38203,7 +38210,6 @@ payload:
   - '+.meicanstatic.com'
   - '+.meichibao.com'
   - '+.meichuanmei.com'
-  - '+.meichubang.com'
   - '+.meidaojia.com'
   - '+.meidebi.com'
   - '+.meideng.net'
@@ -38581,7 +38587,6 @@ payload:
   - '+.mianbaoimg.com'
   - '+.mianbaotou.com'
   - '+.miandanbx.com'
-  - '+.mianfeidianhua.net'
   - '+.mianfeiic.com'
   - '+.mianfeiwendang.com'
   - '+.mianfeiziti.com'
@@ -40313,6 +40318,7 @@ payload:
   - '+.nbweekly.com'
   - '+.nbyang.com'
   - '+.nbyeda.com'
+  - '+.nbyizhu.com'
   - '+.nbz4jc2j.com'
   - '+.ncacg.org'
   - '+.ncartfoundation.org'
@@ -40656,7 +40662,6 @@ payload:
   - '+.nibaguai.com'
   - '+.nibaku.com'
   - '+.nibiye.com'
-  - '+.nic.de'
   - '+.nic.ren'
   - '+.nic.wang'
   - '+.nicaifu.com'
@@ -42085,6 +42090,7 @@ payload:
   - '+.paiyiws.com'
   - '+.paizhe.com'
   - '+.paizi.com'
+  - '+.paizi.net'
   - '+.pajkb.com'
   - '+.pajkdc.com'
   - '+.palace-international.com'
@@ -45998,6 +46004,7 @@ payload:
   - '+.runtimewh.com'
   - '+.runtonggroup.com'
   - '+.runtronic.com'
+  - '+.runwise.co'
   - '+.runwith.cc'
   - '+.runzhize.com'
   - '+.runzi.cc'
@@ -47241,6 +47248,7 @@ payload:
   - '+.shbear.com'
   - '+.shbg.org'
   - '+.shbicycle.com'
+  - '+.shbike.com'
   - '+.shbj.com'
   - '+.shbnrj.com'
   - '+.shbobo.com'
@@ -47477,6 +47485,7 @@ payload:
   - '+.shichangbu.com'
   - '+.shichuedu.com'
   - '+.shici.store'
+  - '+.shicimingju.com'
   - '+.shicishe.com'
   - '+.shiciyun.com'
   - '+.shida66.com'
@@ -49355,6 +49364,7 @@ payload:
   - '+.ssdvd.net'
   - '+.sseinfo.com'
   - '+.ssf.cc'
+  - '+.ssfiction.com'
   - '+.ssgabc.com'
   - '+.ssgeek.com'
   - '+.ssggg.com'
@@ -51190,6 +51200,7 @@ payload:
   - '+.testerhome.com'
   - '+.testerlife.com'
   - '+.testict.com'
+  - '+.testingpai.com'
   - '+.testip.xyz'
   - '+.testiu.com'
   - '+.testjj.com'
@@ -51610,6 +51621,7 @@ payload:
   - '+.timepill.net'
   - '+.timeread.com'
   - '+.timeread.net'
+  - '+.timesboom.com'
   - '+.timesdf-hn.com'
   - '+.timetw.com'
   - '+.timev.com'
@@ -53111,6 +53123,7 @@ payload:
   - '+.ucss.ninja'
   - '+.uctrac.com'
   - '+.uctxt.com'
+  - '+.ucun.tech'
   - '+.ucuuc.com'
   - '+.ucw.pub'
   - '+.ucweb.com'
@@ -56007,6 +56020,7 @@ payload:
   - '+.winds.red'
   - '+.winds2021.com'
   - '+.windsns.com'
+  - '+.windspeedbike.com'
   - '+.windtch.com'
   - '+.windtourgame.com'
   - '+.windworkshop.net'
@@ -56040,6 +56054,7 @@ payload:
   - '+.winning11cn.com'
   - '+.winotmk.com'
   - '+.winrobot360.com'
+  - '+.winsalesaas.com'
   - '+.winsenseos.com'
   - '+.winshang.com'
   - '+.winshangdata.com'
@@ -56291,7 +56306,6 @@ payload:
   - '+.wo1990.com'
   - '+.wo685.com'
   - '+.wo81.com'
-  - '+.wo99.net'
   - '+.woa.com'
   - '+.woaap.com'
   - '+.woaide.com'
@@ -56858,7 +56872,6 @@ payload:
   - '+.wutongtec.com'
   - '+.wutongwan.org'
   - '+.wutongxiang.cc'
-  - '+.wutongzi.com'
   - '+.wutos.com'
   - '+.wutuojia.com'
   - '+.wuuxiang.com'
@@ -57078,7 +57091,6 @@ payload:
   - '+.wykw.com'
   - '+.wykz.com'
   - '+.wylws.com'
-  - '+.wymp46.com'
   - '+.wyn88.com'
   - '+.wyptk.com'
   - '+.wypxj.com'
@@ -58338,7 +58350,6 @@ payload:
   - '+.xinglinpukang.com'
   - '+.xingmai58.com'
   - '+.xingmao.cc'
-  - '+.xingmeihui.com'
   - '+.xingmima.com'
   - '+.xingming.com'
   - '+.xingming.net'
@@ -58511,7 +58522,6 @@ payload:
   - '+.xinwen520.net'
   - '+.xinwengao.net'
   - '+.xinwenlianbo.cc'
-  - '+.xinwenlianbovip.com'
   - '+.xinwo.com'
   - '+.xinxianghui.com'
   - '+.xinxianshilb.com'
@@ -62783,6 +62793,7 @@ payload:
   - '+.zbwbbs.com'
   - '+.zbwdj.com'
   - '+.zbwg.cc'
+  - '+.zbxinmeiti.com'
   - '+.zbxsoft.com'
   - '+.zbxyh.com'
   - '+.zbytb.com'
@@ -62950,6 +62961,7 @@ payload:
   - '+.zf-8.com'
   - '+.zf3d.com'
   - '+.zfancy.net'
+  - '+.zfbhsxg.com'
   - '+.zfboke.com'
   - '+.zfcm.net'
   - '+.zfdmkj.com'
@@ -63528,6 +63540,7 @@ payload:
   - '+.zhidao91.com'
   - '+.zhidaoanli.com'
   - '+.zhidaoketang.com'
+  - '+.zhidaolo.com'
   - '+.zhidemai.com'
   - '+.zhidesoft.com'
   - '+.zhideyimai.com'
@@ -63918,7 +63931,6 @@ payload:
   - '+.zhuang99.com'
   - '+.zhuangji.net'
   - '+.zhuangjiba.com'
-  - '+.zhuangjiyuan.com'
   - '+.zhuangkou.com'
   - '+.zhuangku.com'
   - '+.zhuangpeitu.com'
