--- a/directbak.yaml
+++ b/directbak.yaml
@@ -31,7 +31,6 @@ payload:
   - '+.004218.com'
   - '+.004678.com'
   - '+.00544.com'
-  - '+.0056.cc'
   - '+.0061.com.au'
   - '+.00615.net'
   - '+.00791.com'
@@ -1276,7 +1275,6 @@ payload:
   - '+.14hj.com'
   - '+.14xd.com'
   - '+.150072.com'
-  - '+.150075.com'
   - '+.1502828.com'
   - '+.150cn.com'
   - '+.151.hk'
@@ -2554,7 +2552,6 @@ payload:
   - '+.3033c.com'
   - '+.306t.com'
   - '+.308308.com'
-  - '+.309yy.com'
   - '+.30c.org'
   - '+.30cgy.com'
   - '+.30cn.net'
@@ -3071,7 +3068,6 @@ payload:
   - '+.36krcnd.com'
   - '+.36nu.com'
   - '+.36sfw.com'
-  - '+.36tr.com'
   - '+.36ve.net'
   - '+.36yc.com'
   - '+.36yh.com'
@@ -3847,14 +3843,12 @@ payload:
   - '+.51code.com'
   - '+.51cok.com'
   - '+.51comp.com'
-  - '+.51coolpad.com'
   - '+.51cpm.com'
   - '+.51credit.com'
   - '+.51csr.com'
   - '+.51cto.com'
   - '+.51cube.com'
   - '+.51cunzheng.com'
-  - '+.51cxd.com'
   - '+.51daao.com'
   - '+.51dai.com'
   - '+.51daifu.com'
@@ -5141,7 +5135,6 @@ payload:
   - '+.5y89.com'
   - '+.5ydj.com'
   - '+.5yhua.org'
-  - '+.5yi.com'
   - '+.5ykj.com'
   - '+.5youchou.com'
   - '+.5zai.com'
@@ -6151,7 +6144,6 @@ payload:
   - '+.86010.net'
   - '+.860527.com'
   - '+.860598.com'
-  - '+.860816.com'
   - '+.861522.com'
   - '+.8616.at'
   - '+.86175.com'
@@ -6291,7 +6283,6 @@ payload:
   - '+.88999.com'
   - '+.8899yyy.vip'
   - '+.889su.com'
-  - '+.889xp.com'
   - '+.88bank.com'
   - '+.88bx.com'
   - '+.88cdn.com'
@@ -6759,7 +6750,6 @@ payload:
   - '+.93kk.com'
   - '+.93ku.com'
   - '+.93lh.com'
-  - '+.93ne.com'
   - '+.93njf0.com'
   - '+.93pk.com'
   - '+.93sdk.com'
@@ -6798,7 +6788,6 @@ payload:
   - '+.94lm.com'
   - '+.94mxd.com'
   - '+.94nw.com'
-  - '+.94oz.com'
   - '+.94php.com'
   - '+.94pm.com'
   - '+.94q.com'
@@ -7177,7 +7166,6 @@ payload:
   - '+.9jiu9jiu.com'
   - '+.9juewu.com'
   - '+.9jx.com'
-  - '+.9k9by.com'
   - '+.9k9k.com'
   - '+.9k9ms.com'
   - '+.9kd.com'
@@ -7573,7 +7561,6 @@ payload:
   - '+.adobe55.com'
   - '+.adobeae.com'
   - '+.adobeedu.com'
-  - '+.adobetop.com'
   - '+.adoregeek.com'
   - '+.adpchina.com'
   - '+.adpgsc.com'
@@ -9758,7 +9745,6 @@ payload:
   - '+.baifubao.com'
   - '+.baifumeiba.com'
   - '+.baigepo.com'
-  - '+.baigeseo.com'
   - '+.baigm.com'
   - '+.baigo.net'
   - '+.baigongbao.com'
@@ -9795,6 +9781,7 @@ payload:
   - '+.baiked.com'
   - '+.baikemy.com'
   - '+.baikemy.net'
+  - '+.baikeshiji.com'
   - '+.baikezh.com'
   - '+.bailiaijia.com'
   - '+.bailiangroup.com'
@@ -10234,7 +10221,6 @@ payload:
   - '+.bbmy.net'
   - '+.bbobo.com'
   - '+.bbonfire.com'
-  - '+.bbped.com'
   - '+.bbqe.com'
   - '+.bbqk.com'
   - '+.bbqmw.net'
@@ -10593,7 +10579,6 @@ payload:
   - '+.bestedm.net'
   - '+.bestedm.org'
   - '+.bestexpresser.com'
-  - '+.bestfangchan.com'
   - '+.bestfuturevip.com'
   - '+.bestgo.com'
   - '+.besticity.com'
@@ -10699,7 +10684,6 @@ payload:
   - '+.bhdata.com'
   - '+.bhfangchan.com'
   - '+.bhgmarketplace.com'
-  - '+.bhgxq.com'
   - '+.bhhgallery.com'
   - '+.bhjck.com'
   - '+.bhjysp.com'
@@ -11042,7 +11026,6 @@ payload:
   - '+.bitautoimg.com'
   - '+.bitautotech.com'
   - '+.bitbank.com'
-  - '+.bitbili.net'
   - '+.bitbug.net'
   - '+.bitcellulose.com'
   - '+.bitcongress.com'
@@ -12390,7 +12373,6 @@ payload:
   - '+.cad1688.com'
   - '+.cad8.net'
   - '+.cada.cc'
-  - '+.cadcaecam.com'
   - '+.cadforex.com'
   - '+.cadict.net'
   - '+.cadmon.net'
@@ -15071,7 +15053,6 @@ payload:
   - '+.ciprun.com'
   - '+.cipscom.com'
   - '+.cipunited.com'
-  - '+.ciqinghui.com'
   - '+.cirmall.com'
   - '+.cirno9.net'
   - '+.cirs-reach.com'
@@ -15498,7 +15479,6 @@ payload:
   - '+.cn539.com'
   - '+.cn68.com'
   - '+.cn6szx.com'
-  - '+.cn716.com'
   - '+.cn8fre.com'
   - '+.cn99.com'
   - '+.cn9f.com'
@@ -16495,7 +16475,6 @@ payload:
   - '+.cqcqcq.com'
   - '+.cqcsic.com'
   - '+.cqcsrc.com'
-  - '+.cqcxdl.com'
   - '+.cqcy.com'
   - '+.cqcyls.com'
   - '+.cqdadi.com'
@@ -16988,6 +16967,7 @@ payload:
   - '+.cu321.com'
   - '+.cuaa.net'
   - '+.cuanhuang.com'
+  - '+.cuanna.com'
   - '+.cuantianhou.net'
   - '+.cuav.net'
   - '+.cubead.com'
@@ -17210,7 +17190,6 @@ payload:
   - '+.cyuyan100.com'
   - '+.cywetc.com'
   - '+.cyy18.com'
-  - '+.cyyizuo.com'
   - '+.cyypscl.com'
   - '+.cyyself.name'
   - '+.cyysjm.com'
@@ -17439,7 +17418,6 @@ payload:
   - '+.daidaitv.com'
   - '+.daidongxi.com'
   - '+.daigou.com'
-  - '+.daijinquanaliyun.com'
   - '+.daijun.com'
   - '+.daikela.com'
   - '+.daikuan.com'
@@ -17549,7 +17527,6 @@ payload:
   - '+.dancingcg.com'
   - '+.dandanjiang.tv'
   - '+.dandanman.com'
-  - '+.dandanplay.net'
   - '+.dandantang.com'
   - '+.dandanz.com'
   - '+.dandinghuayi.com'
@@ -17621,7 +17598,6 @@ payload:
   - '+.dao6.net'
   - '+.daoapp.io'
   - '+.daoapp.me'
-  - '+.daocaorenshuwu.com'
   - '+.daochu66.com'
   - '+.daocloud.io'
   - '+.daocloudapp.com'
@@ -17861,7 +17837,6 @@ payload:
   - '+.dbankcloud.eu'
   - '+.dbankcloud.ru'
   - '+.dbankedge.net'
-  - '+.dbaxiaoyu.com'
   - '+.dbbqb.com'
   - '+.dbccv.com'
   - '+.dbcdh.com'
@@ -18102,7 +18077,6 @@ payload:
   - '+.demix.cc'
   - '+.demlution.com'
   - '+.demo8.com'
-  - '+.democome.com'
   - '+.demodashi.com'
   - '+.demogic.com'
   - '+.demohour.com'
@@ -18725,7 +18699,6 @@ payload:
   - '+.dj134.com'
   - '+.dj175.com'
   - '+.dj34.com'
-  - '+.dj3721.net'
   - '+.dj63.com'
   - '+.dj88.com'
   - '+.dj89.com'
@@ -21154,7 +21127,6 @@ payload:
   - '+.evideocloud.net'
   - '+.evideostb.com'
   - '+.evilbinary.org'
-  - '+.evilcos.me'
   - '+.evileyesaint.com'
   - '+.evilwind.fun'
   - '+.evketang.com'
@@ -21247,7 +21219,6 @@ payload:
   - '+.expirenotification.com'
   - '+.expirepausedns.com'
   - '+.expku.com'
-  - '+.expo-china.com'
   - '+.expoeye.net'
   - '+.exponingbo.com'
   - '+.expoon.com'
@@ -21631,7 +21602,6 @@ payload:
   - '+.fantawild.com'
   - '+.fante.com'
   - '+.fanten123.com'
-  - '+.fantizi5.com'
   - '+.fantong.com'
   - '+.fanuchdf.com'
   - '+.fanw8.com'
@@ -21736,7 +21706,6 @@ payload:
   - '+.faxingcn.com'
   - '+.faxingnet.com'
   - '+.faxingsj.com'
-  - '+.faxingtp.com'
   - '+.faxingtupian.com'
   - '+.faxingzhan.com'
   - '+.faxiufang.com'
@@ -22523,7 +22492,6 @@ payload:
   - '+.forestpolice.org'
   - '+.foreveross.com'
   - '+.forgame.com'
-  - '+.forgotfun.org'
   - '+.forindata.com'
   - '+.forkeji.com'
   - '+.forlinx.com'
@@ -23736,6 +23704,7 @@ payload:
   - '+.gfjl.org'
   - '+.gfnormal00an.com'
   - '+.gfrtrttweet.com'
+  - '+.gfsi-food.com'
   - '+.gftuan.com'
   - '+.gfun.me'
   - '+.gfund.com'
@@ -24196,7 +24165,6 @@ payload:
   - '+.gongju.com'
   - '+.gongju5.com'
   - '+.gongjuji.net'
-  - '+.gongjumi.com'
   - '+.gongkaocn.com'
   - '+.gongkaoleida.com'
   - '+.gongkong.com'
@@ -24916,7 +24884,6 @@ payload:
   - '+.gvi-tech.com'
   - '+.gvlocalization.com'
   - '+.gvofl.com'
-  - '+.gw-dv.net'
   - '+.gw-ec.com'
   - '+.gw2sc.com'
   - '+.gw66.vip'
@@ -25245,7 +25212,6 @@ payload:
   - '+.h0f.me'
   - '+.h1bz.com'
   - '+.h231.com'
-  - '+.h2ero.com'
   - '+.h2ex.com'
   - '+.h2os.com'
   - '+.h2vm.com'
@@ -25591,6 +25557,7 @@ payload:
   - '+.hankunlaw.com'
   - '+.hanlefang.net'
   - '+.hanlei.org'
+  - '+.hanlinzhijia.net'
   - '+.hanmadiancan.com'
   - '+.hanmaker.com'
   - '+.hanmeilin.com'
@@ -25750,7 +25717,6 @@ payload:
   - '+.haoji.me'
   - '+.haojiameng.net'
   - '+.haojiaolian.com'
-  - '+.haojiaolian.org'
   - '+.haojing.org'
   - '+.haojue.com'
   - '+.haojue163.com'
@@ -25912,7 +25878,6 @@ payload:
   - '+.happymath2009.org'
   - '+.happymmall.com'
   - '+.happynear.wang'
-  - '+.happyphonewoods.com'
   - '+.happypingpang.com'
   - '+.happyplaygame.net'
   - '+.happyroll.net'
@@ -26069,7 +26034,6 @@ payload:
   - '+.hbjxjy.org'
   - '+.hbjxjyw.com'
   - '+.hbjxym.com'
-  - '+.hbjz12333.com'
   - '+.hbjzx.com'
   - '+.hbjzzx.com'
   - '+.hbkqw.com'
@@ -26308,7 +26272,6 @@ payload:
   - '+.healthjd.com'
   - '+.healthr.com'
   - '+.healthych.com'
-  - '+.healthyun.com'
   - '+.hearstchina.com'
   - '+.heart-game.com'
   - '+.heartide.com'
@@ -27010,7 +26973,6 @@ payload:
   - '+.hkklock.com'
   - '+.hkkuaiyixiu.com'
   - '+.hklego.com'
-  - '+.hklongbang.com'
   - '+.hkm168.com'
   - '+.hkmjd.com'
   - '+.hknet-inc.com'
@@ -27741,7 +27703,6 @@ payload:
   - '+.hszzzx.net'
   - '+.ht-cao.com'
   - '+.ht-saae.com'
-  - '+.ht-sonic.com'
   - '+.ht88.com'
   - '+.ht9.com'
   - '+.htanwang.com'
@@ -28099,7 +28060,6 @@ payload:
   - '+.huazhu.com'
   - '+.huazhuanapp.com'
   - '+.huazhucorp.com'
-  - '+.hubao.cc'
   - '+.hubcyts.com'
   - '+.hubei-design.com'
   - '+.hubeibbs.net'
@@ -28140,7 +28100,6 @@ payload:
   - '+.hugecdn168.com'
   - '+.hugeland.com'
   - '+.huhabao.com'
-  - '+.huhanyong.com'
   - '+.huhoo.com'
   - '+.huhoo.net'
   - '+.huhua.net'
@@ -28227,6 +28186,7 @@ payload:
   - '+.huing.net'
   - '+.huion.com'
   - '+.huiqiangkeji.com'
+  - '+.huiqudsp.com'
   - '+.huirendai.com'
   - '+.huiris.com'
   - '+.huishangbao.com'
@@ -29954,7 +29914,6 @@ payload:
   - '+.improd.works'
   - '+.impta.com'
   - '+.imqq.com'
-  - '+.imqueenapp.com'
   - '+.imququ.com'
   - '+.imquzan.com'
   - '+.imrfresh.com'
@@ -30184,7 +30143,6 @@ payload:
   - '+.inverter.so'
   - '+.invescogreatwall.com'
   - '+.investank.com'
-  - '+.investguider.com'
   - '+.investoday.net'
   - '+.investorscn.com'
   - '+.investstkitts.org'
@@ -30771,7 +30729,6 @@ payload:
   - '+.ivideostar.com'
   - '+.iviewui.com'
   - '+.ivixivi.com'
-  - '+.ivmoe.com'
   - '+.ivocaloid.com'
   - '+.ivsky.com'
   - '+.ivu4e.com'
@@ -31320,7 +31277,6 @@ payload:
   - '+.jgxlzd.com'
   - '+.jgy.com'
   - '+.jgyljt.com'
-  - '+.jgzuan.com'
   - '+.jgzx.org'
   - '+.jgzyw.com'
   - '+.jh3j.com'
@@ -32855,7 +32811,6 @@ payload:
   - '+.jsypj.com'
   - '+.jsyun.cc'
   - '+.jsyxrcb.com'
-  - '+.jszb123.com'
   - '+.jszbtb.com'
   - '+.jszbug.com'
   - '+.jszbw.com'
@@ -34065,7 +34020,6 @@ payload:
   - '+.kjb2c.com'
   - '+.kjcad.net'
   - '+.kjcdn.com'
-  - '+.kjcgzh.com'
   - '+.kjchina.com'
   - '+.kjcity.com'
   - '+.kjcxpp.com'
@@ -34337,14 +34291,12 @@ payload:
   - '+.koudaitiku.com'
   - '+.koudaitong.com'
   - '+.koudashijie.com'
-  - '+.koudin.com'
   - '+.kouer.com'
   - '+.kouer.net'
   - '+.kouke5.com'
   - '+.koukousky.com'
   - '+.koukuko.com'
   - '+.koumakan.cc'
-  - '+.kouqiang1.com'
   - '+.kouqing.com'
   - '+.koushare.com'
   - '+.kousou.cc'
@@ -34615,7 +34567,6 @@ payload:
   - '+.kubikeji.com'
   - '+.kuche.com'
   - '+.kuchuan.com'
-  - '+.kudasuye.com'
   - '+.kudianqi.com'
   - '+.kudiaoyu.com'
   - '+.kudingyu.com'
@@ -34914,7 +34865,6 @@ payload:
   - '+.laidudu.com'
   - '+.laifeng.com'
   - '+.laifu.net'
-  - '+.laifudao.com'
   - '+.laigame7.net'
   - '+.laihema.com'
   - '+.laihua.com'
@@ -34977,7 +34927,6 @@ payload:
   - '+.lan-lin.com'
   - '+.lan1001.com'
   - '+.lanbts.com'
-  - '+.lancdn.com'
   - '+.lancn.net'
   - '+.lanconvey.com'
   - '+.landa-solenoid.com'
@@ -34985,9 +34934,6 @@ payload:
   - '+.landchina.com'
   - '+.landed.cc'
   - '+.landi.com'
-  - '+.landian.la'
-  - '+.landian.vip'
-  - '+.landiannews.com'
   - '+.landing-med.com'
   - '+.landingbj.com'
   - '+.landizs.com'
@@ -35236,7 +35182,6 @@ payload:
   - '+.lawyerbridge.com'
   - '+.lawyermr.com'
   - '+.lawyershanghai.net'
-  - '+.lawyersuperman.com'
   - '+.laxiao.com'
   - '+.layabox.com'
   - '+.layui-inc.com'
@@ -35590,7 +35535,6 @@ payload:
   - '+.less-bug.com'
   - '+.lesscss.net'
   - '+.lessisbetter.site'
-  - '+.lesun.org'
   - '+.letabc.com'
   - '+.letaikeji.com'
   - '+.letao.com'
@@ -35928,7 +35872,6 @@ payload:
   - '+.lif8.com'
   - '+.lifan.com'
   - '+.life365.com'
-  - '+.lifeall.com'
   - '+.lifeeu.com'
   - '+.lifegatemedicine.com'
   - '+.lifeibo.com'
@@ -36921,7 +36864,6 @@ payload:
   - '+.lprcx.com'
   - '+.lpswz.com'
   - '+.lptiyu.com'
-  - '+.lpxin.com'
   - '+.lpxinjuhui.com'
   - '+.lpxt.com'
   - '+.lq-bm.com'
@@ -37311,7 +37253,6 @@ payload:
   - '+.lwork.com'
   - '+.lwrcb.com'
   - '+.lwsay.com'
-  - '+.lwswxs.com'
   - '+.lwtxt.cc'
   - '+.lwxgds.com'
   - '+.lwxiaoshuo.com'
@@ -37365,7 +37306,6 @@ payload:
   - '+.lyancafe.com'
   - '+.lyancoffee.com'
   - '+.lyangchuanbo.com'
-  - '+.lyaudio.com'
   - '+.lyblog.net'
   - '+.lybol.com'
   - '+.lybus.com'
@@ -37803,7 +37743,6 @@ payload:
   - '+.manhua1.com'
   - '+.manhua365.com'
   - '+.manhua456.com'
-  - '+.manhuaba.cc'
   - '+.manhuacheng.com'
   - '+.manhuadao.com'
   - '+.manhuadaohang.com'
@@ -38259,7 +38198,6 @@ payload:
   - '+.meijucenter.com'
   - '+.meijufans.com'
   - '+.meijukan.com'
-  - '+.meijuniao.com'
   - '+.meijuniao.net'
   - '+.meijuq.com'
   - '+.meijutt.com'
@@ -39210,7 +39148,6 @@ payload:
   - '+.mocache.com'
   - '+.mocartoon.com'
   - '+.mockingbot.com'
-  - '+.mockjs.com'
   - '+.mockplus.com'
   - '+.mockuai.com'
   - '+.mocn.cc'
@@ -40591,7 +40528,6 @@ payload:
   - '+.nexttix.net'
   - '+.nextyu.com'
   - '+.nexus.dell.com'
-  - '+.nfa5.com'
   - '+.nfc315.com'
   - '+.nfcic.com'
   - '+.nfcmag.com'
@@ -41916,7 +41852,6 @@ payload:
   - '+.ourjs.com'
   - '+.ourjz.com'
   - '+.ourku.com'
-  - '+.ourl.co'
   - '+.ourlife365.com'
   - '+.ourlinc.com'
   - '+.ourpalm.com'
@@ -42304,7 +42239,6 @@ payload:
   - '+.pc6.com'
   - '+.pc6a.com'
   - '+.pc811.com'
-  - '+.pc841.com'
   - '+.pc9.com'
   - '+.pcaposter.com'
   - '+.pcapqz.com'
@@ -43902,6 +43836,7 @@ payload:
   - '+.qianxinet.com'
   - '+.qianxs.com'
   - '+.qianxun.com'
+  - '+.qianxunclub.com'
   - '+.qianyan001.com'
   - '+.qianyu56.com'
   - '+.qianyuangx.com'
@@ -44072,7 +44007,6 @@ payload:
   - '+.qimingpian.com'
   - '+.qimingvc.com'
   - '+.qimingventures.com'
-  - '+.qimingwang123.com'
   - '+.qimingzi.net'
   - '+.qimo.biz'
   - '+.qimodesign.com'
@@ -44434,7 +44368,6 @@ payload:
   - '+.qluu.com'
   - '+.qlwmw.com'
   - '+.qlxiaozhan.com'
-  - '+.qlxol.com'
   - '+.qm000.com'
   - '+.qm120.com'
   - '+.qm989.com'
@@ -44644,7 +44577,6 @@ payload:
   - '+.qqzonecn.com'
   - '+.qqzong.com'
   - '+.qqzsh.com'
-  - '+.qqzuankuo.com'
   - '+.qqzzz.net'
   - '+.qr25.com'
   - '+.qrcdn.com'
@@ -46659,7 +46591,6 @@ payload:
   - '+.sdyndcjx.com'
   - '+.sdynr.com'
   - '+.sdyuanbao.com'
-  - '+.sdyy.org'
   - '+.sdyyebh010.com'
   - '+.sdyypt.net'
   - '+.sdzbcg.com'
@@ -46705,7 +46636,6 @@ payload:
   - '+.sebug.net'
   - '+.sec-wiki.com'
   - '+.secaibi.com'
-  - '+.secange.com'
   - '+.secbug.cc'
   - '+.secbug.org'
   - '+.secdoctor.com'
@@ -47079,7 +47009,6 @@ payload:
   - '+.shangdixinxi.com'
   - '+.shangdu.com'
   - '+.shangdu.info'
-  - '+.shangduo-ihome.com'
   - '+.shangeedu.com'
   - '+.shangeseo.com'
   - '+.shangfayuan.com'
@@ -47114,7 +47043,6 @@ payload:
   - '+.shanghaitianqi114.com'
   - '+.shanghaitower.com'
   - '+.shanghaixs.com'
-  - '+.shanghaiyueshang.com'
   - '+.shanghaizaojia.com'
   - '+.shanghaizhenji.com'
   - '+.shangji998.com'
@@ -47476,6 +47404,7 @@ payload:
   - '+.shi-ci.com'
   - '+.shi-ming.com'
   - '+.shi78.com'
+  - '+.shianzhixuan.com'
   - '+.shibaihui.org'
   - '+.shibeike.com'
   - '+.shibeiou.com'
@@ -47634,7 +47563,6 @@ payload:
   - '+.shiyuegame.com'
   - '+.shiyunlaile.com'
   - '+.shizhuonet.com'
-  - '+.shjdc.com'
   - '+.shjdceo.com'
   - '+.shjgu.com'
   - '+.shjgxy.net'
@@ -49408,7 +49336,6 @@ payload:
   - '+.ssrrxx.com'
   - '+.ssrtys.com'
   - '+.ssscdn.com'
-  - '+.sssie.com'
   - '+.ssso.com'
   - '+.sst-ic.com'
   - '+.sst-sd.com'
@@ -49581,7 +49508,6 @@ payload:
   - '+.studyget.com'
   - '+.studygolang.com'
   - '+.studyingtours.com'
-  - '+.studyintour.com'
   - '+.studyiris.com'
   - '+.studyjamscn.com'
   - '+.studylinux.net'
@@ -52053,7 +51979,6 @@ payload:
   - '+.topflames.com'
   - '+.topfreeweb.net'
   - '+.topgslb.com'
-  - '+.topguo.com'
   - '+.topgus.com'
   - '+.tophant.com'
   - '+.tophold.com'
@@ -52205,7 +52130,6 @@ payload:
   - '+.tpy100.com'
   - '+.tpyboard.com'
   - '+.tq163.com'
-  - '+.tq321.com'
   - '+.tq520.net'
   - '+.tqcj.com'
   - '+.tqcto.com'
@@ -52422,7 +52346,6 @@ payload:
   - '+.tt1h.com'
   - '+.tt286.com'
   - '+.tt56w.com'
-  - '+.tt65.org'
   - '+.tt83.xyz'
   - '+.tt96596.com'
   - '+.ttaidu.com'
@@ -53233,7 +53156,6 @@ payload:
   - '+.uidec.com'
   - '+.uidev.tech'
   - '+.uidev.xyz'
-  - '+.uigreat.com'
   - '+.uihacker.com'
   - '+.uiiiuiii.com'
   - '+.uil.ink'
@@ -54199,7 +54121,6 @@ payload:
   - '+.vnvshen.com'
   - '+.vnzmi.com'
   - '+.vobao.com'
-  - '+.vobao.mobi'
   - '+.vocalmiku.com'
   - '+.voccdn.com'
   - '+.vocinno.com'
@@ -55776,7 +55697,6 @@ payload:
   - '+.whnfc.com'
   - '+.whngd.org'
   - '+.whoami.akamai.net'
-  - '+.whoceansys.com'
   - '+.whocool.com'
   - '+.whoil.net'
   - '+.whoolala.com'
@@ -56586,7 +56506,6 @@ payload:
   - '+.wqcms.com'
   - '+.wqdian.com'
   - '+.wqdian.net'
-  - '+.wqetqi.vip'
   - '+.wqetrip.com'
   - '+.wqgp.com'
   - '+.wqhunqing.com'
@@ -56671,7 +56590,6 @@ payload:
   - '+.wsmaoyi.com'
   - '+.wsmaoyi.net'
   - '+.wsonh.com'
-  - '+.wsoso.com'
   - '+.wsound.cc'
   - '+.wsoversea.info'
   - '+.wsq.cool'
@@ -57175,7 +57093,6 @@ payload:
   - '+.x1340.com'
   - '+.x158.tv'
   - '+.x1997.net'
-  - '+.x1n.xin'
   - '+.x23qb.com'
   - '+.x23us.cc'
   - '+.x23us.me'
@@ -57619,7 +57536,6 @@ payload:
   - '+.xhuojia.com'
   - '+.xhup.club'
   - '+.xhwhouse.com'
-  - '+.xhxa9.com'
   - '+.xhxsw.com'
   - '+.xhxswz.com'
   - '+.xhxw.com'
@@ -57665,7 +57581,6 @@ payload:
   - '+.xianbai.me'
   - '+.xianbao.net'
   - '+.xianbdj.com'
-  - '+.xianbense.com'
   - '+.xianbey.com'
   - '+.xianchengyou.com'
   - '+.xianchihuo.net'
@@ -58333,7 +58248,6 @@ payload:
   - '+.xinghao8.xyz'
   - '+.xinghengedu.com'
   - '+.xinghuankj.com'
-  - '+.xinghuiyl.com'
   - '+.xinghuo100.com'
   - '+.xinghuo365.com'
   - '+.xinghuogroup.com'
@@ -58459,7 +58373,6 @@ payload:
   - '+.xinlvtu.com'
   - '+.xinm123.com'
   - '+.xinmanduo.com'
-  - '+.xinmanyuan.com'
   - '+.xinmei6.com'
   - '+.xinmeihu.com'
   - '+.xinmima.com'
@@ -58612,7 +58525,6 @@ payload:
   - '+.xitong520.com'
   - '+.xitong8.com'
   - '+.xitongbuluo.com'
-  - '+.xitongcheng.cc'
   - '+.xitongcheng.com'
   - '+.xitongdaquan.net'
   - '+.xitonggho.com'
@@ -58998,7 +58910,6 @@ payload:
   - '+.xnara.org'
   - '+.xnb.me'
   - '+.xncoding.com'
-  - '+.xncoo.com'
   - '+.xncredit.com'
   - '+.xndm.tech'
   - '+.xnguke.com'
@@ -59069,7 +58980,6 @@ payload:
   - '+.xqb24.com'
   - '+.xqblog.com'
   - '+.xqbxz.com'
-  - '+.xqchuxing.com'
   - '+.xqckg.com'
   - '+.xqfunds.com'
   - '+.xqggz.com'
@@ -60766,6 +60676,7 @@ payload:
   - '+.yiqihao.com'
   - '+.yiqijian.com'
   - '+.yiqijixiang.com'
+  - '+.yiqikan8.com'
   - '+.yiqimaila.com'
   - '+.yiqiming88.com'
   - '+.yiqioffice.com'
@@ -61395,7 +61306,6 @@ payload:
   - '+.youleliwu.com'
   - '+.youlinyouke.com'
   - '+.youlishipin.com'
-  - '+.youliv.com'
   - '+.youloft.com'
   - '+.youlong123.com'
   - '+.youlongciqing.com'
@@ -63169,6 +63079,7 @@ payload:
   - '+.zgzsrc.com'
   - '+.zgzwl.com'
   - '+.zgzy.net'
+  - '+.zgzylt.com'
   - '+.zgzyqccj.com'
   - '+.zgzzs.com'
   - '+.zh-itone.com'
@@ -63320,7 +63231,6 @@ payload:
   - '+.zhaokao.net'
   - '+.zhaokeli.com'
   - '+.zhaokuaizhao.com'
-  - '+.zhaole.club'
   - '+.zhaoliangji.com'
   - '+.zhaoliming.net'
   - '+.zhaolongedu.com'
@@ -64101,6 +64011,7 @@ payload:
   - '+.zhutao.com'
   - '+.zhuti.com'
   - '+.zhutihome.net'
+  - '+.zhutile.com'
   - '+.zhutix.com'
   - '+.zhutix.net'
   - '+.zhutizhijia.net'
@@ -64300,7 +64211,6 @@ payload:
   - '+.ziyouwu.com'
   - '+.ziyuan.tv'
   - '+.ziyuan605.com'
-  - '+.ziyuanbu.com'
   - '+.ziyuangou.com'
   - '+.ziyuanku.com'
   - '+.ziyuanm.com'
